add step increment
